--- a/forntEnd/src/index.css
+++ b/forntEnd/src/index.css
@@ -19,3 +19,13 @@ a:visited {
   color: unset;
   text-decoration: none;
 }
+
+.vendas-conteiner {
+  width: 100%;
+  max-width: 900px;
+  margin: 0 auto;
+}
+
+#vendas {
+  padding: 260px 10px;
+}
